@@ -16,9 +16,9 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 #
-# build.sh - build script for rasterizer task
+# build.sh - Unix Build Script for Rasterizer Task
 #
-# $Id: build.sh
+# $Id$
 # --------------------------------------------------------------------------
 
 # ----- Verify and Set Required Environment Variables -------------------------
@@ -32,6 +32,17 @@ if [ "$JAVA_HOME" = "" ] ; then
   exit 1
 fi
 
+# OS specific support.  $var _must_ be set to either true or false.
+cygwin=false;
+case "`uname`" in
+  CYGWIN*) cygwin=true ;;
+esac
+
+# For Cygwin, ensure paths are in UNIX format before anything is touched
+if $cygwin ; then
+  [ -n "$JAVA_HOME" ] &&
+    JAVA_HOME=`cygpath --unix "$JAVA_HOME"`
+fi
 
 
 BATIK_HOME=../..
@@ -39,10 +50,14 @@ BATIK_HOME=../..
 
 # ----- Set up classpath ---------------------------------------------------
 
-CP=$JAVA_HOME/lib/tools.jar:$ANT_HOME/lib/build/ant_1_4_1.jar:$BATIK_HOME/lib/build/crimson-ant.jar:$BATIK_HOME/lib/build/jaxp.jar
+CP=$JAVA_HOME/lib/tools.jar:$ANT_HOME/lib/build/ant-1.6.5.jar:$ANT_HOME/lib/build/ant-launcher-1.6.5.jar:$BATIK_HOME/lib/build/crimson-1.1.3.jar
 
 CP=$CP:$BATIK_HOME/classes
 
+if $cygwin; then
+  JAVA_HOME=`cygpath --path --windows "$JAVA_HOME"`
+  CP=`cygpath --path --windows "$CP"`
+fi
 
 # ----- Execute The Requested Build -------------------------------------------
 
@@ -51,7 +66,7 @@ if [ $# != 0 ] ; then
   shift 1
 fi
 
-$JAVA_HOME/bin/java $ANT_OPTS -classpath $CP org.apache.tools.ant.Main -Dant.home=$ANT_HOME $TARGET -Dargs="$*"
+"$JAVA_HOME/bin/java" $ANT_OPTS -classpath "$CP" org.apache.tools.ant.Main -emacs -Dant.home=$ANT_HOME $TARGET -Dargs="$*"
 
 
 # ----- Cleanup the environment --------------------------------------------
